--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   --light-color: #E8EEF2;
   --medium-color: #B5AA9D;
   --dark-color: #313638;
-  --e-bg: #FF5967;
+  --e-bg: #e66767;
   --max-width: 1200px;
 }
 
@@ -20,6 +20,7 @@
 body {
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
   font-size: 10px;
+  background: var(--dark-color);
 }
 
 /* ------------------------------------------------------ */
@@ -43,12 +44,14 @@ body {
   display: block;
   margin: 0 auto 1rem auto;
 }
+
+
 /* ------------------------------------------------------ */
 /* LOGO */
 /* ------------------------------------------------------ */
 
 .navbar {
-  background: var(--primary-color);
+  background: var(--dark-color);
 }
 
 .logo {
@@ -78,13 +81,13 @@ body {
 /* ------------------------------------------------------ */
 #employees-view {
   color: var(--light-color);
-  background: var(--dark-color);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   border-radius: 10px;
   padding-bottom: 0.5rem;
+  
 
 }
 
@@ -97,32 +100,28 @@ body {
 
 #employees-view .employees-list .employee {
   background: var(--e-bg);
-  display: grid;
-  grid-template-columns: 1fr 2fr;
   padding: 0.5rem 0.5rem;
-  align-items: center;
+  text-align: center;
   border-radius: 5px;
 }
-
-#employees-view .employees-list .employee img {
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  margin-right: 1.5rem;
-}
-
 
 /* ------------------------------------------------------ */
 /* SCHEDULE */
 /* ------------------------------------------------------ */
+
 #schedule {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  background: var(--secondary-color);
+  background: var(--dark-color);
   color: var(--light-color);
   border-radius: 10px;
   margin: 1rem 0;
+
+  /* background: #474f52;
+  box-shadow: 4px 4px 4px 2px #212425;
+  padding: 1rem 2rem;
+  border-radius: 10px; */
 }
 
 #schedule .day {
@@ -149,8 +148,9 @@ body {
   align-items: center;
   padding: 0.5rem;
   margin-bottom: 0.5rem;
-  background: var(--dark-color);
+  background: var(--secondary-color);
   border-radius: 25px;
+  box-shadow: 4px 4px 4px 2px #212425;
 }
 
 #schedule .day .employees-scheduled .employee-shift .employee-initials {
